# genetics-results-db

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
api/: main.py  requirements.txt  yaml_loader.py
configs/: datasets.yaml
docs/: project-spec.md
schemas/: asm_qtl.sql  asm_qtl_v.sql  coloc_credsets.sql  coloc_credsets_v.sql  colocalization.sql  colocalization_v.sql  credible_sets.sql  credible_sets_v.sql  exome_variant_results.sql  exome_variant_results_v.sql  gene_annotations.sql  gene_annotations_v.sql  gene_burden_results.sql  gene_burden_results_v.sql  mpra.sql  mpra_v.sql  open_chromatin.sql  open_chromatin_v.sql  variant_effect.sql  variant_effect_v.sql
scripts/: build_gene_annotations.py  deploy.sh  generate_resource_sql.py  load_all_data.sh  load_asm_qtl.sh  load_credsets_coloc.sh  load_data.py  load_exome_data.sh  load_exome_variants_extra.sh  load_gene_annotations.sh  load_gene_burden_extra.sh  load_genebass_gene.sh  load_genebass_variants.sh  load_mpra.sh  load_open_chromatin.sh  load_pseudo.sh  load_variant_effect.sh  setup_bigquery.sh
tests/: test_build_gene_annotations.py
